[tool.poetry]
name = "wh"
version = "0.1.0"
description = ""
authors = ["Vikram <vikramsingh001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.2"

[tool.isort]
profile = "black"
py_version = 38

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
